--- a/frontend-cemos/public/assets/content/intendencia/18-223-2016/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/18-223-2016/script/m1.md
@@ -1,4 +1,5 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 1 | Lei de Mobilização Nacional | A execução da Mobilização Nacional é caracterizada pela celeridade e compulsoriedade. De acordo com a Lei nº 11.631/2007, qual é o requisito formal exigido para que ela seja decretada? | Ato exclusivo do Comandante Supremo das Forças Armadas, dispensando autorização legislativa. | Ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele, quando no intervalo das sessões legislativas. | Ato conjunto dos Ministros de Estado integrantes do Conselho de Defesa Nacional. | Decreto Legislativo emanado diretamente do Presidente do Senado Federal. | b | Conforme o **art. 4º, caput**, a execução será decretada por ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele. | | |
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 2 | Lei de Mobilização Nacional | O Sistema Nacional de Mobilização (SINAMOB) é composto por diversos ministérios e órgãos da Presidência. Qual órgão é designado pela lei como o órgão central do sistema? | O Gabinete de Segurança Institucional da Presidência da República. | O Ministério da Justiça, responsável pela segurança jurídica das ações. | O Ministério da Defesa. | A Casa Civil da Presidência da República, responsável pela coordenação interministerial. | c | Nos termos do **art. 6º, parágrafo único**, o Sinamob tem como órgão central o Ministério da Defesa. | | |
+| Portaria nº 223/2016 – Offset | Pág 1 | Diretrizes Offset | De acordo com a Portaria nº 223/MB/2016, a qual órgão é atribuída a competência para emitir as Normas para o funcionamento da estrutura de *Offset* na Marinha do Brasil e supervisionar a implementação das Diretrizes aprovadas? | Ao Ministério da Defesa. | Ao Estado-Maior da Armada (EMA). | À Diretoria de Engenharia Naval. | Ao Comando de Operações Navais. | b | Conforme o **art. 2º** da Portaria, atribui-se ao EMA a emissão das Normas e a supervisão da implementação. | | |
+| Portaria nº 223/2016 – Offset | Pág 2 | Diretrizes Offset | Entre os objetivos das diretrizes de *Offset* na Marinha, descritos no item 1.1, qual é a finalidade específica relacionada à fabricação e manutenção de produtos do setor naval pelas empresas nacionais? | Maximizar a importação de peças de reposição para garantir estoque. | Minimizar a dependência tecnológica externa e ampliar o poder de mobilização nacional. | Reduzir o quadro de pessoal da Base Industrial de Defesa para cortar custos. | Priorizar a aquisição de equipamentos de prateleira sem transferência de tecnologia. | b | Nos termos do **item 1.1, alínea 'b'**, o objetivo é ampliar a capacidade das empresas nacionais visando a minimizar a dependência tecnológica e ampliar o poder de mobilização. | | |
+| Portaria nº 223/2016 – Offset | Pág 3 | Diretrizes Offset | No contexto das Diretrizes Gerais de *Offset* na Marinha (item 1.2), o que deve ser priorizado com o intuito de elevar o nível de capacitação dos recursos humanos relacionados à Base Industrial de Defesa (BID)? | A contratação direta de consultores estrangeiros temporários. | A aquisição exclusiva de *hardware* sem documentação técnica. | A transferência de tecnologia. | O aumento das cotas de importação de serviços. | c | Conforme o **item 1.2, alínea 'e'**, deve-se priorizar a transferência de tecnologia visando à elevação do nível de capacitação dos recursos humanos. | | |
