--- a/frontend-cemos/public/assets/content/intendencia/19-899-2005/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/19-899-2005/script/m1.md
@@ -1,4 +1,4 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 1 | Lei de Mobilização Nacional | A execução da Mobilização Nacional é caracterizada pela celeridade e compulsoriedade. De acordo com a Lei nº 11.631/2007, qual é o requisito formal exigido para que ela seja decretada? | Ato exclusivo do Comandante Supremo das Forças Armadas, dispensando autorização legislativa. | Ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele, quando no intervalo das sessões legislativas. | Ato conjunto dos Ministros de Estado integrantes do Conselho de Defesa Nacional. | Decreto Legislativo emanado diretamente do Presidente do Senado Federal. | b | Conforme o **art. 4º, caput**, a execução será decretada por ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele. | | |
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 2 | Lei de Mobilização Nacional | O Sistema Nacional de Mobilização (SINAMOB) é composto por diversos ministérios e órgãos da Presidência. Qual órgão é designado pela lei como o órgão central do sistema? | O Gabinete de Segurança Institucional da Presidência da República. | O Ministério da Justiça, responsável pela segurança jurídica das ações. | O Ministério da Defesa. | A Casa Civil da Presidência da República, responsável pela coordenação interministerial. | c | Nos termos do **art. 6º, parágrafo único**, o Sinamob tem como órgão central o Ministério da Defesa. | | |
+| Portaria Normativa nº 899/2005 | Pág. 1 | Política Nacional da Indústria de Defesa – PNID | De acordo com a Portaria Normativa nº 899/MD, de 2005, como é definido o conceito de "produto estratégico de defesa"? | São exclusivamente armamentos letais produzidos por empresas estatais, cuja tecnologia seja dominada inteiramente pelo setor público. | São bens e serviços que, devido a peculiaridades de obtenção ou emprego, possam comprometer a consecução de objetivos relacionados à segurança ou à defesa do País. | Refere-se a qualquer insumo industrial que seja importado pelas Forças Armadas e que necessite de autorização especial da Presidência da República. | Conjunto de empresas privadas e organizações civis que participam da distribuição de equipamentos de proteção individual para o setor militar. | b | Conforme o **art. 2º, inciso II**, produto estratégico de defesa são bens e serviços que pelas peculiaridades de obtenção... possam comprometer... a consecução de objetivos relacionados à segurança ou à defesa do País. | | |
+| Portaria Normativa nº 899/2005 | Pág. 2 | Política Nacional da Indústria de Defesa – PNID | A implementação da Política Nacional da Indústria de Defesa (PNID) estabelece orientações específicas para a atuação das empresas públicas e a condução de ações estratégicas. Assinale a alternativa correta sobre essas diretrizes. | As ações estratégicas devem retirar da indústria os riscos inerentes à atividade empresarial, garantindo subsídios estatais plenos. | As empresas públicas devem atuar em livre concorrência com o setor privado para forçar a redução de preços dos produtos de defesa. | As empresas públicas devem desempenhar suas atividades em complemento às de caráter privado, evitando a concorrência com estas últimas. | O objetivo principal é a estatização imediata de toda a Base Industrial de Defesa (BID) para garantir a soberania nacional. | c | Nos termos do **art. 5º, inciso III**, as empresas públicas devem desempenhar suas atividades em complemento às de caráter privado, evitando a concorrência com estas últimas. | | |
