--- a/frontend-cemos/public/assets/content/intendencia/20-586-2006/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/20-586-2006/script/m1.md
@@ -1,4 +1,6 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 1 | Lei de Mobilização Nacional | A execução da Mobilização Nacional é caracterizada pela celeridade e compulsoriedade. De acordo com a Lei nº 11.631/2007, qual é o requisito formal exigido para que ela seja decretada? | Ato exclusivo do Comandante Supremo das Forças Armadas, dispensando autorização legislativa. | Ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele, quando no intervalo das sessões legislativas. | Ato conjunto dos Ministros de Estado integrantes do Conselho de Defesa Nacional. | Decreto Legislativo emanado diretamente do Presidente do Senado Federal. | b | Conforme o **art. 4º, caput**, a execução será decretada por ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele. | | |
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 2 | Lei de Mobilização Nacional | O Sistema Nacional de Mobilização (SINAMOB) é composto por diversos ministérios e órgãos da Presidência. Qual órgão é designado pela lei como o órgão central do sistema? | O Gabinete de Segurança Institucional da Presidência da República. | O Ministério da Justiça, responsável pela segurança jurídica das ações. | O Ministério da Defesa. | A Casa Civil da Presidência da República, responsável pela coordenação interministerial. | c | Nos termos do **art. 6º, parágrafo único**, o Sinamob tem como órgão central o Ministério da Defesa. | | |
+| Portaria Normativa nº 586/2006 | Pág 1 | Ações Estratégicas para o PNID | No contexto da conscientização da sociedade sobre a importância da Base Industrial de Defesa (BID), qual mecanismo é identificado explicitamente como instrumento de articulação entre o Ministério da Defesa, os órgãos de Governo e as empresas? | O Conselho de Segurança Nacional. | O Fórum das Indústrias de Defesa (FID). | A Assessoria Parlamentar do Congresso. | A Secretaria de Produtos Estratégicos. | b | Nos termos do **art. 2º, inciso I, alínea "d"**, a ação estratégica prevê utilizar o Fórum das Indústrias de Defesa (FID) como instrumento de articulação quando oportuno. | | |
+| Portaria Normativa nº 586/2006 | Pág 2 | Ações Estratégicas para o PNID | Com o objetivo de diminuir a dependência externa e garantir a sustentabilidade da indústria, qual medida é proposta em relação ao orçamento anual do Ministério da Defesa para investimentos em Pesquisa e Desenvolvimento (P&D)? | Que a parcela destinada a P&D seja considerada impositiva, com percentual fixo da arrecadação prevista. | Que os recursos sejam provenientes exclusivamente de parcerias com a iniciativa privada estrangeira. | Que o orçamento seja contingenciado conforme a disponibilidade do Tesouro Nacional. | Que os investimentos em P&D sejam substituídos pela compra direta de pacotes tecnológicos externos ("off-the-shelf"). | a | Conforme o **art. 2º, inciso II, alínea "i"**, deve-se propor que a parcela do orçamento anual do MD destinada a investimentos para P&D seja considerada impositiva, com percentual fixo. | | |
+| Portaria Normativa nº 586/2006 | Pág 3 | Ações Estratégicas para o PNID | Para melhorar a qualidade tecnológica dos produtos estratégicos de defesa, qual papel institucional é proposto para o Ministério da Defesa (MD) no âmbito do sistema de ciência e tecnologia? | Atuar apenas como fiscalizador das agências reguladoras civis. | Ser o principal financiador de startups estrangeiras de tecnologia dual. | Instituir-se como órgão central de coordenação do sistema de C,T&I na área de interesse da Defesa Nacional. | Delegar a coordenação tecnológica integralmente às associações de classe da indústria (ABIMDE). | c | De acordo com o **art. 2º, inciso V, alínea "c"**, propõe-se a instituição do MD como órgão central de coordenação do sistema de ciência, tecnologia e inovação na área de interesse da Defesa Nacional. | | |
+| Portaria Normativa nº 586/2006 | Pág 4 | Ações Estratégicas para o PNID | Visando o aumento da competitividade da BID brasileira para expandir as exportações, qual orientação específica é dada em relação à atuação dos futuros adidos militares brasileiros? | Devem focar exclusivamente na análise de inteligência militar, evitando assuntos comerciais. | Devem divulgar o produto de defesa nacional e institucionalizar o apoio às iniciativas dos empresários da BID nos países onde estiverem acreditados. | Devem proibir a divulgação de produtos nacionais para evitar espionagem industrial. | Devem priorizar a importação de tecnologias estrangeiras em detrimento da venda de produtos nacionais. | b | Nos termos do **art. 2º, inciso VI, alínea "b"**, a ação estratégica é orientar os futuros adidos militares quanto à divulgação do produto de defesa nacional e apoiar as iniciativas dos empresários da BID. | | |
