--- a/frontend-cemos/public/assets/content/intendencia/21-15-2018/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/21-15-2018/script/m1.md
@@ -1,4 +1,8 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 1 | Lei de Mobilização Nacional | A execução da Mobilização Nacional é caracterizada pela celeridade e compulsoriedade. De acordo com a Lei nº 11.631/2007, qual é o requisito formal exigido para que ela seja decretada? | Ato exclusivo do Comandante Supremo das Forças Armadas, dispensando autorização legislativa. | Ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele, quando no intervalo das sessões legislativas. | Ato conjunto dos Ministros de Estado integrantes do Conselho de Defesa Nacional. | Decreto Legislativo emanado diretamente do Presidente do Senado Federal. | b | Conforme o **art. 4º, caput**, a execução será decretada por ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele. | | |
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 2 | Lei de Mobilização Nacional | O Sistema Nacional de Mobilização (SINAMOB) é composto por diversos ministérios e órgãos da Presidência. Qual órgão é designado pela lei como o órgão central do sistema? | O Gabinete de Segurança Institucional da Presidência da República. | O Ministério da Justiça, responsável pela segurança jurídica das ações. | O Ministério da Defesa. | A Casa Civil da Presidência da República, responsável pela coordenação interministerial. | c | Nos termos do **art. 6º, parágrafo único**, o Sinamob tem como órgão central o Ministério da Defesa. | | |
+| Portaria Normativa nº 15/2018 | Pág 1 | Política de Obtenção de Produtos de Defesa (POBPRODE) | De acordo com o Art. 6º da POBPRODE, quais são estritamente as modalidades de obtenção de Produtos de Defesa (PRODE) tratadas nesta política? | Compra, aluguel e comodato. | Aquisição, desenvolvimento e modernização. | Importação, exportação e nacionalização. | Pesquisa, prototipagem e desativação. | b | Conforme o **art. 6º**, as modalidades são estritamente as de aquisição, desenvolvimento e modernização. | | |
+| Portaria Normativa nº 15/2018 | Pág 2 | Política de Obtenção de Produtos de Defesa (POBPRODE) | Nos termos das definições adotadas pela POBPRODE, o que caracteriza a modalidade de "desenvolvimento"? | A compra ou contratação de um PRODE já existente no mercado nacional ou internacional. | A modificação introduzida no PRODE para atualizá-lo e readequá-lo às necessidades operacionais. | A condução de atividades de PD&I visando aumentar maturidades tecnológicas e reduzir riscos para produção. | O conjunto de organizações estatais e privadas que realizem manutenção de sistemas de defesa. | c | Nos termos do **art. 7º, inciso IV**, desenvolvimento abrange atividades de PD&I visando aumentar maturidades tecnológicas e produtivas. | | |
+| Portaria Normativa nº 15/2018 | Pág 3 | Política de Obtenção de Produtos de Defesa (POBPRODE) | Qual é o objetivo principal da POBPRODE em relação aos documentos de alto nível da defesa nacional? | Garantir a total independência tecnológica do país em curto prazo, ignorando parcerias externas. | Assegurar que as obtenções estejam alinhadas com a Estratégia Nacional de Defesa, a Política Nacional de Defesa e o Livro Branco da Defesa Nacional. | Priorizar exclusivamente a aquisição de produtos de prateleira para redução de custos imediatos. | Centralizar todas as decisões táticas de emprego da força no Ministério da Defesa. | b | Conforme o **art. 8º**, o objetivo é assegurar o alinhamento com a END, a PND e o LBDN. | | |
+| Portaria Normativa nº 15/2018 | Pág 4 | Política de Obtenção de Produtos de Defesa (POBPRODE) | No que tange à abrangência da sistemática de obtenção, a quem cabe a responsabilidade pelo processo de seleção do PRODE? | Exclusivamente à Secretaria de Produtos de Defesa (SEPROD). | Ao Ministério da Economia, visando o menor preço. | Às Forças Singulares. | Ao Estado-Maior Conjunto das Forças Armadas, em todos os casos. | c | Nos termos do **art. 11, § 2º**, o processo de seleção do PRODE ficará a cargo das Forças Singulares. | | |
+| Portaria Normativa nº 15/2018 | Pág 5 | Política de Obtenção de Produtos de Defesa (POBPRODE) | No contexto da obtenção conjunta de PRODE, qual das atividades abaixo é de competência das Forças Singulares durante o fluxo do processo analítico? | Análise das possibilidades de participação da Base Industrial de Defesa (BID). | Otimização das ações orçamentárias pertinentes. | Designação da Força Singular executora do processo de seleção. | Realização do estudo de viabilidade (aplicabilidade, praticabilidade, custos e riscos). | d | Conforme o **art. 13, inciso IV**, cabe às Forças Singulares o estudo de viabilidade evidenciando possíveis soluções. | | |
+| Portaria Normativa nº 15/2018 | Pág 6 | Política de Obtenção de Produtos de Defesa (POBPRODE) | Em relação às orientações estratégicas para o fomento à Base Industrial de Defesa (BID), como a POBPRODE trata a participação de microempresas? | Sua participação deve ser estimulada nas obtenções, a título de fomento. | Elas devem ser proibidas de participar de licitações de alta complexidade tecnológica. | Elas devem se fundir obrigatoriamente a grandes empresas estatais. | A política não faz menção específica a microempresas, focando apenas nas estratégicas. | a | Nos termos do **art. 16, inciso IV**, deve-se estimular a participação de médias, pequenas e microempresas a título de fomento. | | |
