--- a/frontend-cemos/public/assets/content/intendencia/22-3662-2021/script/m1.md
+++ b/frontend-cemos/public/assets/content/intendencia/22-3662-2021/script/m1.md
@@ -1,4 +1,12 @@
 | bibliografia_titulo | paginas | assunto | pergunta | alternativa_a | alternativa_b | alternativa_c | alternativa_d | resposta_correta | justificativa_resposta_certa | caiu_em_prova | ano_prova |
 |---|---|---|---|---|---|---|---|---|---|---|---|
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 1 | Lei de Mobilização Nacional | A execução da Mobilização Nacional é caracterizada pela celeridade e compulsoriedade. De acordo com a Lei nº 11.631/2007, qual é o requisito formal exigido para que ela seja decretada? | Ato exclusivo do Comandante Supremo das Forças Armadas, dispensando autorização legislativa. | Ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele, quando no intervalo das sessões legislativas. | Ato conjunto dos Ministros de Estado integrantes do Conselho de Defesa Nacional. | Decreto Legislativo emanado diretamente do Presidente do Senado Federal. | b | Conforme o **art. 4º, caput**, a execução será decretada por ato do Poder Executivo autorizado pelo Congresso Nacional ou referendado por ele. | | |
-| Lei nº 11.631/2007 - Lei de Mobilização Nacional | Pág 2 | Lei de Mobilização Nacional | O Sistema Nacional de Mobilização (SINAMOB) é composto por diversos ministérios e órgãos da Presidência. Qual órgão é designado pela lei como o órgão central do sistema? | O Gabinete de Segurança Institucional da Presidência da República. | O Ministério da Justiça, responsável pela segurança jurídica das ações. | O Ministério da Defesa. | A Casa Civil da Presidência da República, responsável pela coordenação interministerial. | c | Nos termos do **art. 6º, parágrafo único**, o Sinamob tem como órgão central o Ministério da Defesa. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 1 | PComTIC Defesa | A PComTIC Defesa aplica-se a quais tipos de contratações realizadas pelos órgãos do Ministério da Defesa e Forças Singulares? | Apenas às compras nacionais de produtos de defesa realizadas por inexigibilidade. | Às compras e contratações de Produtos de Defesa (PRODE) que impliquem importação. | Exclusivamente às contratações de serviços de engenharia civil em território nacional. | A todas as compras de bens de consumo comuns, independentemente de importação. | b | Nos termos do **art. 2º, caput**, a PComTIC Defesa aplica-se às compras e contratações de PRODE que impliquem importação. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 2 | PComTIC Defesa | De acordo com as definições da Portaria, o que caracteriza a "compensação direta"? | Aquela que envolve bens e serviços não relacionados ao objeto do contrato. | A prática de troca de mercadorias (barter) sem envolvimento financeiro. | A compensação que envolve bens e serviços diretamente relacionados com o objeto do contrato de importação. | O investimento financeiro direto no capital social da empresa contratante. | c | Conforme o **art. 3º, inciso VII**, compensação direta é aquela que envolve bens e serviços diretamente relacionados com o objeto do contrato de importação. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 3 | PComTIC Defesa | Qual das alternativas descreve corretamente a medida de compensação industrial denominada "produção sob licença"? | Produção no Brasil de componente de produto manufaturado estrangeiro sob responsabilidade de uma subcontratada. | Produção no Brasil acordada entre governos, envolvendo cessão de conhecimentos técnicos detidos pelo governo estrangeiro. | Produção no Brasil de produto ou componente sob autorização de empresa estrangeira, em conformidade com a licença e direitos de propriedade intelectual. | Desenvolvimento e produção em parceria de produto, visando ao suporte logístico durante seu ciclo de vida. | c | Nos termos do **art. 3º, inciso XI, alínea 'b', item 2**, produção sob licença é a produção no Brasil sob autorização de empresa estrangeira ou componente protegido por direitos de propriedade intelectual. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 4 | PComTIC Defesa | No contexto das medidas de compensação comercial, como é definida a "recompra" (Buy-Back)? | Troca de produtos ou serviços selecionados por outros de valor equivalente em uma única transação. | Acordo para que o fornecedor estrangeiro compre um determinado valor em produtos do fabricante nacional. | Acordo em que o fornecedor aceita, como pagamento total ou parcial, produtos derivados do produto originalmente importado. | Investimento direto do fornecedor na bolsa de valores do país comprador. | c | Conforme o **art. 3º, inciso XI, alínea 'c', item 3**, recompra refere-se a um acordo para aceitar produtos derivados do produto originalmente importado como pagamento. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 5 | PComTIC Defesa | Um dos objetivos centrais da PComTIC Defesa, relacionado à cadeia produtiva, é: | Aumentar a dependência externa para garantir o alinhamento com potências aliadas. | Buscar a autossuficiência da cadeia produtiva e diminuir a dependência externa. | Focar exclusivamente na importação de produtos acabados para reduzir custos internos. | Priorizar a compra de equipamentos usados para rápida recomposição de frota. | b | Nos termos do **art. 4º, inciso II**, um dos objetivos é buscar a autossuficiência da cadeia produtiva e diminuir a dependência externa. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 6 | PComTIC Defesa | Quem possui competência para aprovar uma modalidade de compensação não prevista expressamente na lista do art. 3º, mediante requerimento? | O Comandante da Força Singular contratante, de forma autônoma. | O Secretário de Produtos de Defesa. | O Ministro de Estado da Defesa. | O Chefe do Estado-Maior Conjunto das Forças Armadas. | c | Conforme o **art. 6º**, compete ao Ministro de Estado da Defesa aprovar outra modalidade de medida de compensação mediante requerimento. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 7 | PComTIC Defesa | O que os setores de coordenação da PComTIC nas Forças Singulares devem estabelecer em relação aos créditos de compensação? | Um sistema de leilão para venda de créditos a empresas privadas. | Um banco de créditos de compensação para registro e contabilização dos créditos excedentes. | Uma proibição total de acúmulo de créditos para contratos futuros. | A transferência automática de créditos para o Tesouro Nacional em moeda corrente. | b | Nos termos do **art. 9º, inciso III**, devem estabelecer um banco de crédito de compensação para fins de registro e contabilização dos créditos excedentes. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 8 | PComTIC Defesa | A inclusão de um acordo de compensação torna-se obrigatória nas negociações de contratos de importação de PRODE quando o valor líquido (FOB) for igual ou superior a: | US$ 10.000.000,00 (dez milhões de dólares). | US$ 50.000.000,00 (cinquenta milhões de dólares). | US$ 100.000.000,00 (cem milhões de dólares). | US$ 1.000.000,00 (um milhão de dólares). | b | Conforme o **art. 12**, as negociações com valor igual ou superior a US$ 50.000.000,00 devem incluir, necessariamente, um acordo de compensação. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 9 | PComTIC Defesa | Qual a regra geral sobre o prazo de execução e implementação do acordo de compensação em relação ao contrato principal? | O acordo de compensação deve sempre ter metade da duração do contrato principal. | O prazo deve, sempre que possível, coincidir com a duração do contrato principal associado. | O acordo de compensação deve iniciar apenas após o término da vigência do contrato principal. | Não há vinculação temporal entre o acordo de compensação e o contrato de aquisição. | b | Nos termos do **art. 19**, o prazo de execução deve, sempre que possível, coincidir com a duração do contrato principal associado. | | |
+| Portaria Normativa nº 3.662/2021 | Pág 10 | PComTIC Defesa | Qual é a limitação imposta para a utilização de créditos excedentes de compensação em um novo contrato? | Não podem comprometer mais de 50% do valor total do novo contrato. | Podem ser usados integralmente, cobrindo 100% da nova obrigação de compensação. | Não podem comprometer mais de 20% do valor a ser compensado no novo contrato. | Só podem ser utilizados se o novo contrato for com um fornecedor diferente. | c | Conforme o **parágrafo único do art. 23**, os créditos excedentes não podem comprometer mais de 20% do valor a ser compensado no novo contrato. | | |
