--- a/frontend-cemos/public/assets/content/intendencia/19-899-2005/script/1m.md
+++ b/frontend-cemos/public/assets/content/intendencia/19-899-2005/script/1m.md
@@ -13,10 +13,10 @@ Gere perguntas que testem conceitos-chave, autores, teorias, eventos:
 - a identificação de causas e consequências de eventos.
 - As alternativas devem ser plausíveis, evitando opções óbvias ou absurdas.
 
-bibliografia_titulo: preencher com "Lei nº 11.631/2007 - Lei de Mobilização Nacional".
+bibliografia_titulo: preencher com "Portaria Normativa nº 899/2005".
 “paginas” será preenchido com o markador ## referente a página ao qual se refere, ex: se ## Página 11 então 'Pág 11 ...'
 pergunta: texto completo da questão.
-    “assunto” será preenchido com 'Lei de Mobilização Nacional'.
+    “assunto” será preenchido com 'Política Nacional da Indústria de Defesa – PNID'.
 alternativa_a até alternativa_d: alternativas de resposta.
 resposta_correta: letra da alternativa correta (a, b, c ou d).
 justificativa_resposta_certa:
